// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`file resource e2e file resource test: File create 1`] = `
Object {
  "_message": "Wrote file file.txt",
  "content": "Hello, world!",
  "id": "file.txt",
  "path": "file.txt",
}
`;

exports[`file resource e2e file resource test: File create plan 1`] = `
Object {
  "currentState": undefined,
  "describe": "Write file.txt",
  "diff": "[36m@@ -0,0 +1 @@[m
[32m{+Hello, world!+}[m
",
  "newState": "Hello, world!",
}
`;

exports[`file resource e2e file resource test: File destroy 1`] = `
Object {
  "_message": "Wrote file file.txt",
  "content": "Hello, world!1",
  "id": "file.txt",
  "path": "file.txt",
}
`;

exports[`file resource e2e file resource test: File update 1`] = `
Object {
  "_message": "Wrote file file.txt",
  "content": "Hello, world!1",
  "id": "file.txt",
  "path": "file.txt",
}
`;

exports[`file resource e2e file resource test: File update plan 1`] = `
Object {
  "currentState": "Hello, world!",
  "describe": "Write file.txt",
  "diff": "[36m@@ -1 +1 @@[m
Hello, [31m[-world!-][m[32m{+world!1+}[m
",
  "newState": "Hello, world!1",
}
`;
